# legos.memes

./: .bandit  .gitignore  .travis.yaml  .travis.yml  CHANGES.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-deploy.yaml  python-test.yaml
legos/: memes.py  templates.json
tests/: meme_objects.json  test_memes.py
