[metadata]
name = legos.memes
version = 0.3.3
url = https://github.com/drewpearce/legos.memes
author = Drew Pearce
description = Meme generator using the memegen api
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3

[options]
install_requires =
    legobot>=1.2.5
    requests
namespace_packages =
    legos
packages = find:
